--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-materialize": "^2.1.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
     "superagent": "^3.8.2"
   },
   "scripts": {
