--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
-  bucket: codesquad-library.wheejuni.com
+  bucket: codesquad-library-frontend
   region: ap-northeast-2
   local_dir: build
   skip_cleanup: true
