--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-materialize": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-spinners": "^0.3.1",
+    "react-star-rating": "^1.4.2",
+    "react-stars": "^2.2.5",
+    "react-tag-input": "^4.9.1",
     "redux": "^3.7.2",
     "superagent": "^3.8.2"
   },
