--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,23 @@ script:
   - CI=false yarn build 
 
 deploy:
-  provider: s3
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_KEY
-  bucket: codesquad-library.wheejuni.com
-  region: ap-northeast-2
-  local_dir: build
-  skip_cleanup: true
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: codesquad-library.wheejuni.com
+    region: ap-northeast-2
+    local_dir: build
+    skip_cleanup: true
+    on:
+      branch: master
+
+  - provider: s3 
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: beta-codesquad-library.wheejuni.com
+    region: ap-northeast-2
+    local_dir: build
+    skip_cleanup: true
+    on:
+      branch: dev
   
